Fix build script to properly use backup template
Critical fix for Netlify deployment issue:
- Move backup creation to BEGINNING of build function
- Add validation to ensure we're backing up the property page, not selector
- Remove index.html.backup from .gitignore and commit it
- This ensures Netlify always has the correct template to build from

Now language files are correctly ~29KB instead of ~2KB
Root selector page remains ~2KB as expected

--- a/.gitignore
+++ b/.gitignore
@@ -66,4 +66,4 @@ images/originals/
 optimize-images.sh
 
 # Multi-language build artifacts
-index.html.backup
+# Note: index.html.backup is now committed to ensure Netlify has the template
